[gd_scene load_steps=12 format=3 uid="uid://drokqxldqrwlg"]

[ext_resource type="PackedScene" uid="uid://gklar7wo4mhs" path="res://Enemies/Chrysalis/Chrysalis.blend" id="1_1bk1y"]
[ext_resource type="Script" path="res://Enemies/Chrysalis/ChrysalisController.gd" id="1_aj6bu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_f761t"]
radius = 3.1544
height = 10.7603

[sub_resource type="Animation" id="Animation_qc7ip"]
resource_name = "hit"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krpm6"]
_data = {
"hit": SubResource("Animation_qc7ip")
}

[sub_resource type="Animation" id="Animation_mrxod"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gibs:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bxa5y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gibs:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulgop"]
_data = {
"RESET": SubResource("Animation_bxa5y"),
"death": SubResource("Animation_mrxod")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ebqdu"]
emission_shape = 3
emission_box_extents = Vector3(1, 4, 1)
direction = Vector3(0, 1, 0)
initial_velocity_min = 11.49
initial_velocity_max = 11.49
scale_min = 0.1
scale_max = 0.85
color = Color(0.764706, 0.137255, 0.25098, 1)
hue_variation_min = -0.13
hue_variation_max = 0.64

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0g5fa"]
albedo_color = Color(0.512766, 0.0174049, 0.0934796, 1)
metallic_specular = 0.38
roughness = 0.12

[sub_resource type="SphereMesh" id="SphereMesh_yy5m2"]
material = SubResource("StandardMaterial3D_0g5fa")

[node name="ChrysalisController" type="RigidBody3D" groups=["chrysalis"]]
collision_layer = 2
script = ExtResource("1_aj6bu")

[node name="Chrysalis" parent="." instance=ExtResource("1_1bk1y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0371189, 0, -0.0520408)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.43367, 0)
shape = SubResource("CapsuleShape3D_f761t")

[node name="HitAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_krpm6")
}

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ulgop")
}

[node name="Gibs" type="GPUParticles3D" parent="."]
emitting = false
amount = 250
lifetime = 2.17
one_shot = true
explosiveness = 0.31
process_material = SubResource("ParticleProcessMaterial_ebqdu")
draw_pass_1 = SubResource("SphereMesh_yy5m2")

[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_death_animation_animation_finished"]

[editable path="Chrysalis"]
